# multi-cluster-eval

./: .gitignore  Dockerfile  README.md  build_and_push_lumi.sh  build_sif_local.sh  cluster_env.sh  cluster_env_using_bash.sh  clusters.json  pyproject.toml
.github/workflows/: build-and-push-apptainer.yml  build-and-push-docker.yml  build-and-push-singularity.yml
apptainer/: jureca.def  leonardo.def  lumi.def
clusterenv/: cluster_env.sh
clusters/: *.leonardo.local.sh  clusters.json  jureca-dc*.sh  jureca.sh  leonardo.sh  lumi.sh
docker/: jureca.Dockerfile  lumi.Dockerfile  lumi_slim.Dockerfile
oellm/: clusters.json  container_utils.py  main.py  template.sbatch
