[project]
name = "oellm"
version = "0.1.0"
description = "OpenEuroLLM evaluation package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "jsonargparse",
    "datasets<4.0.0",
    "rich",
    "huggingface_hub",
]

[project.scripts]
oellm = "oellm.main:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oellm"
module-root = ""
include = ["oellm/clusters.json"]

# Note: torch and lm-eval-harness dependencies removed to keep installation lightweight
# Dataset pre-downloading now works directly with HuggingFace datasets library